@@ -85,115 +85,115 @@ class TYPE(object):
 
 class application_window(object):
 
-    maximized = False
+    maximized       = False
     _maximized_type = TYPE.BOOLEAN
     
-    position = [0, 0]
-    _position_type = TYPE.INTEGER_LIST
+    position        = [0, 0]
+    _position_type  = TYPE.INTEGER_LIST
     
-    size = [600, 400]
-    _size_type = TYPE.INTEGER_LIST
+    size            = [600, 400]
+    _size_type      = TYPE.INTEGER_LIST
 
 class editor(object):
 
-    edit_mode = MODE.TIME
-    _edit_mode_type = TYPE.CONSTANT
-    _edit_mode_class = MODE
+    edit_mode         = MODE.TIME
+    _edit_mode_type   = TYPE.CONSTANT
+    _edit_mode_class  = MODE
     
-    framerate = FRAMERATE.FR_23_976
-    _framerate_type = TYPE.CONSTANT
-    _framerate_class = FRAMERATE
+    framerate         = FRAMERATE.FR_23_976
+    _framerate_type   = TYPE.CONSTANT
+    _framerate_class  = FRAMERATE
     
-    limit_undo = True
-    _limit_undo_type = TYPE.BOOLEAN
+    limit_undo        = True
+    _limit_undo_type  = TYPE.BOOLEAN
     
-    undo_levels = 25
+    undo_levels       = 25
     _undo_levels_type = TYPE.INTEGER
 
 class encoding_dialog(object):
 
-    size = [400, 400]
+    size       = [400, 400]
     _size_type = TYPE.INTEGER_LIST
 
 class file(object):
 
-    directory = os.path.expanduser('~')
-    _directory_type = TYPE.STRING
+    directory                  = os.path.expanduser('~')
+    _directory_type            = TYPE.STRING
 
-    encoding = None
-    _encoding_type = TYPE.STRING
+    encoding                   = None
+    _encoding_type             = TYPE.STRING
 
-    fallback_encodings = ['utf8', 'windows1252']
-    _fallback_encodings_type = TYPE.STRING_LIST
+    fallback_encodings         = ['utf8', 'windows1252']
+    _fallback_encodings_type   = TYPE.STRING_LIST
 
-    format = FORMAT.SUBRIP
-    _format_type = TYPE.CONSTANT
-    _format_class = FORMAT
+    format                     = FORMAT.SUBRIP
+    _format_type               = TYPE.CONSTANT
+    _format_class              = FORMAT
 
-    maximum_recent_files = 5
+    maximum_recent_files       = 5
     _maximum_recent_files_type = TYPE.INTEGER
 
-    newlines = NEWLINE.UNIX
-    _newlines_type = TYPE.CONSTANT
-    _newlines_class = NEWLINE
+    newlines                   = NEWLINE.UNIX
+    _newlines_type             = TYPE.CONSTANT
+    _newlines_class            = NEWLINE
 
-    recent_files = []
-    _recent_files_type = TYPE.STRING_LIST
+    recent_files               = []
+    _recent_files_type         = TYPE.STRING_LIST
 
-    try_locale_encoding = True
-    _try_locale_encoding_type = TYPE.BOOLEAN
+    try_locale_encoding        = True
+    _try_locale_encoding_type  = TYPE.BOOLEAN
 
-    visible_encodings = ['utf8', 'windows1252']
-    _visible_encodings_type = TYPE.STRING_LIST
+    visible_encodings          = ['utf8', 'windows1252']
+    _visible_encodings_type    = TYPE.STRING_LIST
 
 class general(object):
 
-    version = __version__
+    version       = __version__
     _version_type = TYPE.STRING
 
 class subtitle_insert(object):
 
-    amount = 1
-    _amount_type = TYPE.INTEGER
+    amount          = 1
+    _amount_type    = TYPE.INTEGER
 
-    position = POSITION.BELOW
-    _position_type = TYPE.CONSTANT
+    position        = POSITION.BELOW
+    _position_type  = TYPE.CONSTANT
     _position_class = POSITION
 
 class spell_check(object):
 
-    check_all_projects = False
-    _check_all_projects_type = TYPE.BOOLEAN
+    check_all_projects         = False
+    _check_all_projects_type   = TYPE.BOOLEAN
 
-    check_text = True
-    _check_text_type = TYPE.BOOLEAN
+    check_text                 = True
+    _check_text_type           = TYPE.BOOLEAN
 
-    check_translation = False
-    _check_translation_type = TYPE.BOOLEAN
+    check_translation          = False
+    _check_translation_type    = TYPE.BOOLEAN
 
-    text_language = None
-    _text_language_type = TYPE.STRING
+    text_language              = None
+    _text_language_type        = TYPE.STRING
 
-    translation_language = None
+    translation_language       = None
     _translation_language_type = TYPE.STRING
 
 class view(object):
 
-    font = None
-    _font_type = TYPE.STRING
+    font                   = None
+    _font_type             = TYPE.STRING
 
-    use_default_font = True
+    use_default_font       = True
     _use_default_font_type = TYPE.BOOLEAN
 
-    statusbar = True
-    _statusbar_type = TYPE.BOOLEAN
+    statusbar              = True
+    _statusbar_type        = TYPE.BOOLEAN
 
-    toolbar = True
-    _toolbar_type = TYPE.BOOLEAN
+    toolbar                = True
+    _toolbar_type          = TYPE.BOOLEAN
 
-    columns = [NO, SHOW, HIDE, DURN, TEXT]
-    _columns_type = TYPE.CONSTANT_LIST
-    _columns_class = COLUMN
+    columns                = [NO, SHOW, HIDE, DURN, TEXT]
+    _columns_type          = TYPE.CONSTANT_LIST
+    _columns_class         = COLUMN
 
 
 def _get_boolean(arg):
